[tool.poetry]
name = "api-gfycat.com"
version = "0.1.0"
description = ""
authors = ["a_nazarova"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
requests = "^2.31.0"
timestamp = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
